# fio2hledger

./: .gitignore  CHANGELOG.md  README.org  cabal.project  default.nix  fio2hledger.cabal  update-samples
app/: Main.hs
sample-in/: sample-update.json  sample.json
sample-out/: fio-czk.journal.golden
sample-split-out/: fio-czk-2021.journal.golden  fio-czk-2022.journal  fio-czk.journal.golden
sample-split-up-out/: fio-czk-2021.journal  fio-czk-2022.journal.golden  fio-czk-2023.journal  fio-czk.journal
src/: Fio2Hledger.hs
src/Fio2Hledger/: Format.hs  Types.hs
test/: Golden.hs
