cabal-version:       2.2
name:                fio2hledger
version:             0.1.0.0
synopsis:            Fio API to hledger journal exporter
description:         Grab data from your Fio bank account and export to hledger journal
homepage:            https://github.com/sorki/fio2hledger
license:             BSD-3-Clause
license-file:        LICENSE
author:              Richard Marko
maintainer:          srk@48.io
copyright:           2020 Richard Marko
category:            Finance
build-type:          Simple

extra-source-files:
    CHANGELOG.md
    LICENSE
    README.org
    sample-in/*.json
    sample-out/*.journal
    sample-out/*.journal.golden
    sample-split-out/*.journal
    sample-split-out/*.journal.golden
    sample-split-up-out/*.journal
    sample-split-up-out/*.journal.golden

Common commons
  if impl(ghc >= 8.10)
    ghc-options:  -Wall -Wunused-packages
  else
    ghc-options:  -Wall

library
  import:              commons
  hs-source-dirs:      src
  exposed-modules:     Fio2Hledger
                     , Fio2Hledger.Format
                     , Fio2Hledger.Types
                     , Paths_fio2hledger
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , data-default
                     , directory
                     , fio
                     , hledger-lib >= 1.27 && < 1.34
                     , optparse-applicative
                     , pretty-simple
                     , safe
                     , safe-money
                     , text
                     , time
  default-language:    Haskell2010

executable fio2hledger
  import:              commons
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , fio2hledger
  default-language:    Haskell2010

test-suite fio2hledger-tests
  import:              commons
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Golden
  build-tool-depends:
    tasty-discover:tasty-discover

  build-depends:       base >= 4.7 && < 5
                     , data-default
                     , directory
                     , fio2hledger
                     , tasty
                     , tasty-golden
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/sorki/fio2hledger
